syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.qianxun.grpc.lib.dept";
option java_outer_classname = "DeptProto";
option objc_class_prefix = "RTG";

package dept;

import public "google/protobuf/timestamp.proto";

service GrpcDept {
    rpc GetDept(DeptReq) returns (DeptRes) {}
    rpc GetDeptList(DeptReq) returns (stream DeptRes) {}
    rpc UpdateDept(DeptRes) returns (UpdateDeptRes) {}
    rpc DeleteDept(DeptReq) returns (UpdateDeptRes) {}
}

message DeptReq {
    int32 id = 1;
}

message DeptRes {
    int32 id = 1;
    int32 parent_id = 2;
    int32 sort = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
    int32 status = 6;
    string db_source = 7;
}

message UpdateDeptRes {
    bool success = 1;
}
